# fzsd2026_robot_lab

./: .gitignore  README.md  robot_lab使用说明.md  可用奖励（仅依赖IMU电机）.md  电机数据.md  训练摘要.md
scripts/reinforcement_learning/rsl_rl/: play.py  train.py
scripts/tools/: error_logger.py  verify_spring_effect.py  view_init_pose.py  visualize_motor_trace.py
scripts/tools/error_tracker/: README.md  pyproject.toml
scripts/tools/error_tracker/error_tracker/: __init__.py  _version.py  base.py  center.py  sources.py
source/robot_lab/data/ActuatorNets/my_dog/: motor(旧).pt  motor.pt
source/robot_lab/data/Assets/Isaac/Props/UIElements/: arrow_x.usd  assets_web.py  default_environment.usd
source/robot_lab/data/Robots/my_dog/newdog3/: CMakeLists.txt  package.xml
source/robot_lab/data/Robots/my_dog/newdog3/launch/: display.launch  gazebo.launch
source/robot_lab/data/Robots/my_dog/newdog3/meshes/: FL_calf_link.STL  FL_foot_link.STL  FL_hip_link.STL  FL_thigh_link.STL  FR_calf_link.STL  FR_foot_link.STL  FR_hip_link.STL  FR_thigh_link.STL  RL_calf_link.STL  RL_hip_link.STL  RL_thigh_link.STL  RR_calf_link.STL  RR_hip_link.STL  RR_thigh_link.STL  imu_link.STL
source/robot_lab/data/Robots/my_dog/newdog3/urdf/: .asset_hash  config.yaml  newdog3.csv  newdog3.urdf  newdog3.usd
source/robot_lab/data/Robots/my_dog/newdog6/: CMakeLists.txt  package.xml
source/robot_lab/data/Robots/my_dog/newdog6/launch/: display.launch  (+1 more)
source/robot_lab/data/Robots/my_dog/newdog7/: CMakeLists.txt  package.xml
source/robot_lab/robot_lab/assets/: custom_actuators.py  my_dog.py  my_dog.tar.xz
(+63 files in other folders)
